--- a/genindex.html
+++ b/genindex.html
@@ -46,8 +46,8 @@
     <link rel="search" title="Search" href="search.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
-  <meta name="docsearch:version" content="0.0.post1.dev1+g8c01fb5" />
-    <meta name="docbuild:last-update" content="Oct 23, 2024"/>
+  <meta name="docsearch:version" content="0.0.post1.dev1+g5db036e" />
+    <meta name="docbuild:last-update" content="Nov 01, 2024"/>
   </head>
   
   
@@ -469,9 +469,11 @@
       <ul>
         <li><a href="api/plume_learn.html#module-plume_learn">plume_learn</a>
 </li>
-        <li><a href="api/plume_learn.analyzer.html#module-plume_learn.analyzer">plume_learn.analyzer</a>
+        <li><a href="api/plume_learn.ml_functions.html#module-plume_learn.ml_functions">plume_learn.ml_functions</a>
 </li>
-        <li><a href="api/plume_learn.ml_utils.html#module-plume_learn.ml_utils">plume_learn.ml_utils</a>
+        <li><a href="api/plume_learn.plume_analyzer.html#module-plume_learn.plume_analyzer">plume_learn.plume_analyzer</a>
+</li>
+        <li><a href="api/plume_learn.plume_utils.html#module-plume_learn.plume_utils">plume_learn.plume_utils</a>
 </li>
         <li><a href="api/plume_learn.html#module-plume_learn.skeleton">plume_learn.skeleton</a>
 </li>
@@ -492,19 +494,26 @@
 </li>
       </ul></li>
       <li>
-    plume_learn.analyzer
+    plume_learn.ml_functions
 
       <ul>
-        <li><a href="api/plume_learn.analyzer.html#module-plume_learn.analyzer">module</a>
+        <li><a href="api/plume_learn.ml_functions.html#module-plume_learn.ml_functions">module</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
-    plume_learn.ml_utils
+    plume_learn.plume_analyzer
 
       <ul>
-        <li><a href="api/plume_learn.ml_utils.html#module-plume_learn.ml_utils">module</a>
+        <li><a href="api/plume_learn.plume_analyzer.html#module-plume_learn.plume_analyzer">module</a>
+</li>
+      </ul></li>
+      <li>
+    plume_learn.plume_utils
+
+      <ul>
+        <li><a href="api/plume_learn.plume_utils.html#module-plume_learn.plume_utils">module</a>
 </li>
       </ul></li>
       <li>
