--- a/py-modindex.html
+++ b/py-modindex.html
@@ -47,8 +47,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
-  <meta name="docsearch:version" content="0.0.post1.dev1+g5db036e" />
-    <meta name="docbuild:last-update" content="Nov 01, 2024"/>
+  <meta name="docsearch:version" content="0.0.post1.dev1+ge868326" />
+    <meta name="docbuild:last-update" content="Nov 19, 2024"/>
 
 
   </head>
