--- a/genindex.html
+++ b/genindex.html
@@ -46,8 +46,8 @@
     <link rel="search" title="Search" href="search.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
-  <meta name="docsearch:version" content="0.0.post1.dev1+g8a2da05" />
-    <meta name="docbuild:last-update" content="Feb 21, 2025"/>
+  <meta name="docsearch:version" content="0.0.post1.dev1+g491ba83" />
+    <meta name="docbuild:last-update" content="May 16, 2025"/>
   </head>
   
   
@@ -599,7 +599,7 @@
         <div class="footer-item">
 
   <p class="sphinx-version">
-    Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.2.0.
+    Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.2.3.
     <br/>
   </p>
 </div>
