--- a/contributing.html
+++ b/contributing.html
@@ -49,8 +49,8 @@
     <link rel="prev" title="Plume-Learn" href="readme.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
-  <meta name="docsearch:version" content="0.0.post1.dev1+gdcdfe1e" />
-    <meta name="docbuild:last-update" content="May 20, 2025"/>
+  <meta name="docsearch:version" content="0.0.post1.dev1+g1385bba" />
+    <meta name="docbuild:last-update" content="May 30, 2025"/>
   </head>
   
   
