--- a/_modules/index.html
+++ b/_modules/index.html
@@ -46,7 +46,7 @@
     <link rel="search" title="Search" href="../search.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
-  <meta name="docsearch:version" content="0.0.post1.dev1+g1385bba" />
+  <meta name="docsearch:version" content="0.0.post1.dev1+g4e58f1a" />
     <meta name="docbuild:last-update" content="May 30, 2025"/>
   </head>
   
